#tools
add_subdirectory(ManuallyAlignPointCloud)
add_subdirectory(ViewGeometry)
add_subdirectory(ManuallyCropPointCloud)
add_subdirectory(MergeMesh)
add_subdirectory(EncodeShader)
add_subdirectory(ConvertPointCloud)

#test
add_subdirectory("TestPointCloud")
add_subdirectory("TestCameraPoseTrajectory")
add_subdirectory("TestLineSet")
add_subdirectory("TestTriangleMesh")
add_subdirectory("TestVisualizer")
add_subdirectory("TestOpenMP")
add_subdirectory("TestFlann")
add_subdirectory("TestFileSystem")
add_subdirectory("TestProgramOptions")
add_subdirectory("TestDepthCapture")
add_subdirectory("TestPCDFileFormat")
add_subdirectory("TestFileDialog")
add_subdirectory("TestImage")
add_subdirectory("TestPoseGraph")
add_subdirectory("TestRegistrationRANSAC")
if(OPEN3D_BUILD_LIBREALSENSE)
	add_subdirectory("TestRealSense")
endif(OPEN3D_BUILD_LIBREALSENSE)

#experimental
add_subdirectory(IntegrateRGBD)
add_subdirectory(OdometryRGBD)
add_subdirectory(ViewPCDMatch)
add_subdirectory(EvaluateFeatureMatch)
add_subdirectory(EvaluatePCDMatch)
add_subdirectory(ViewDistances)
add_subdirectory(TrimMeshBasedOnPointCloud)

