add_subdirectory(ManuallyAlignPointCloud)

project(EncodeShader)
add_executable(${PROJECT_NAME} EncodeShader.cpp)
set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "apps/tools")

project(MergeMesh)
add_executable(${PROJECT_NAME} MergeMesh.cpp)
target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/modules/Core/include")
target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/modules/IO/include")
target_link_libraries(${PROJECT_NAME} Core IO)
set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "apps/tools")

project(ConvertPointCloud)
add_executable(${PROJECT_NAME} ConvertPointCloud.cpp)
target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/modules/Core/include")
target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/modules/IO/include")
target_link_libraries(${PROJECT_NAME} Core IO)
set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "apps/tools")

project(ManuallyCropPointCloud)
add_executable(${PROJECT_NAME} ManuallyCropPointCloud.cpp)
target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/modules/Core/include")
target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/modules/IO/include")
target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/modules/Visualization/include")
target_link_libraries(${PROJECT_NAME} Visualization Core IO)
set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "apps/tools")

project(ViewGeometry)
add_executable(${PROJECT_NAME} ViewGeometry.cpp)
target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/modules/Core/include")
target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/modules/IO/include")
target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/modules/Visualization/include")
target_link_libraries(${PROJECT_NAME} Core IO Visualization)
set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "apps/tools")
